@@ -1,3 +1,4 @@
-# $Id: Slaves.properties,v 1.2 2004/02/04 23:52:55 mog Exp $
+# $Id: Slaves.properties,v 1.3 2004/06/04 21:34:28 mog Exp $
 slaves=${color}15${bold}${slave}${coloroff}: ${color}15${bold}(${bold}${coloroff} UP: ${xfersup} @ ${throughputup} ${color}15${bold})-(${bold}${coloroff} DN: ${xfersdown} @ ${throughputdown}/s ${color}15${bold})-(${bold}${coloroff} DF:${bold}${coloroff} ${bold}${diskfree}${bold}/${disktotal} ${color}15${bold})${bold}${coloroff} 
 slaves.offline=${color}15${bold}${slave}${coloroff}: ${color}4${bold}OFFLINE${bold}${coloroff}
+slaves.notfound=${color}15${bold}${slave}${coloroff}: ${color}4${bold}NOTFOUND${bold}${coloroff}
